	  observers that a configuration method change has been carried out.
	  So far observers were only notified right before the change takes place.
	+ Add _notifyChangedIface() to factor code that calls observer to
	  notify ifaceMethodChanged and ifaceMethodChangeDone
	+ Add etherIface to fetch the ethernet interface from a  ppp interface
1.4.2
	+ Restart squid when failover events are produced to avoid problems
	+ Do not check host when adding a ping to gateway rule in WAN Failover
1.4.1
	+ Do not run ifdown for network interfaces when network is started from
	  /etc/init.d/ebox start This seems to avoid some issues with DHCP
	  configured gateways at boot time
1.4
	+ i18n help string
1.3.15
	+ Bug fix: warning instead of error if can't add failover rule
	+ Bug fix: now a gateway without IP assigned can be edited
1.3.14
	+ Added multi-gateway support for DHCP and PPPoE
	+ Add a warning if a user sets an interface as external and we detect
	  the connection is made through that interface
	+ Remove migration scrips:
		- 0001_import_default_gateway.pl
		- 0002_add_weight_to_gateway.pl
		- 0003_import_routes_to_mvc.pl
		- 0004_import_dns_to_mvc.pl
1.3.13
	+ Bug fix: configuration of PPPoE interfaces now works when
	  confirmation is required because of other modules
	+ Default field in gateways model uses '/ajax/viewer/booleanViewer.mas'
	  instead of in-place edition
1.3.11
	+ Bug fix: fix issue with virtual interfaces on vlan interfaces
	+ Add breadcrumbs
1.3.10
	+ Added PPPoE support
1.3.7
	+ Bug fix: update ebox-netcfg-import to not add upload and download as those
	  fields do no exist any longer
1.3.6
	+ Remove upload/download fields from gateways.
	  Traffic shaping has its own model for that
	+ Bug fix: traffic generated by eBox didn't come out from the
	  right interface as we cleared the CONNMARK with a --save-mark
1.3.4
	+ bugfix: add use=web to guess the public address
	+ bugfix: make ddclient work with dhcp configured interfaces