@@ -195,13 +195,13 @@ sub run
             my $squid = $global->modInstance('squid');
             my $timeout = 60;
             while ($timeout) {
-            	try {
-            		$squid->restartService();
+                try {
+                    $squid->restartService();
                     last;
                 } catch EBox::Exceptions::Lock with {
-            		sleep 5;
-            		$timeout -= 5;
-            	};
+                    sleep 5;
+                    $timeout -= 5;
+                };
             }
             if ($timeout <= 0) {
                 EBox::error('WAN Failover: proxy module has been locked for 60 seconds.');
@@ -316,16 +316,36 @@ sub _setIptablesRule # (gw, set)
 {
     my ($self, $gw, $set) = @_;
 
-    # We add or delete the rule based on 'set' argument
-    my $action = $set ? '-A' : '-D';
+    my $chain = 'FAILOVER-TEST';
+    # Flush previous rules from custom chain. It'll fail silently
+    # if it doesn't exist
+    EBox::Sudo::silentRoot("/sbin/iptables -t mangle -F $chain");
+    # Remove reference to custom chain from OUTPUT. It will aslo fail
+    # silently if it doesn't exist
+    EBox::Sudo::silentRoot("/sbin/iptables -t mangle -D OUTPUT -j $chain");
 
-    my $mark = $self->{marks}->{$gw};
+    if ($set) {
+        # Create custom chain
+        EBox::Sudo::silentRoot("/sbin/iptables -t mangle -N $chain");
+        # Add refrence to custom chain from OUTPUT
+        EBox::Sudo::silentRoot("/sbin/iptables -t mangle -A OUTPUT -j $chain");
 
-    my $rule = "/sbin/iptables -t mangle $action OUTPUT "
+        # We need to add a rule to return and do nothing
+        # when the traffic is generated by ebox's apache
+        my $apachePort = EBox::Global->modInstance('apache')->port();
+        my $rule = "/sbin/iptables -t mangle -A $chain "
+             . "-p tcp --source-port $apachePort -j RETURN";
+        EBox::Sudo::root($rule);
+
+        # Add rule to mark packets generated by ebox, i.e: failover tests
+        my $mark = $self->{marks}->{$gw};
+        $rule = "/sbin/iptables -t mangle -A $chain "
              . "-m owner --gid-owner ebox -j MARK --set-mark $mark";
-
-    #EBox::debug("Setting rule: $rule\n");
-    EBox::Sudo::root($rule);
+        EBox::Sudo::root($rule);
+    } else {
+        # Delete custom chain. It'll fail silently if it doesn't exist
+        EBox::Sudo::silentRoot("/sbin/iptables -t mangle -X $chain");
+    }
 }
 
 
